--- a/app/views/hiking_trails/index.html.erb
+++ b/app/views/hiking_trails/index.html.erb
@@ -12,7 +12,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
-          <a href="/hiking_trails/<%= trail.id %>"><%=  trail.description.titleize %>, <%=trail.location.city_country.capitalize%>
+          <a href="/hiking_trails/<%= trail.id %>"><%=  trail.description.titleize %>, <%=trail.location.city_country.titleize%>
           </a>
         </h3>
       </div>
