--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -12,7 +12,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
-          <a href="/hotels/<%= hotel.id %>"><%=  hotel.description.titleize %>, <%=hotel.location.city_country.capitalize%>
+          <a href="/hotels/<%= hotel.id %>"><%=  hotel.description.titleize %>, <%=hotel.location.city_country.titleize%>
           </a>
         </h3>
       </div>
