--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Our Adventures Cheatsheet</title>
+  <title>Our Adventure Cheatsheet</title>
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Our Adventures Cheatsheet</a>
+        <a href="/" class="navbar-brand">Our Adventure Cheatsheet</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,6 +50,7 @@
             <li><a href="/locations/pricesort/1">Price</a></li>
             <li><a href="/locations/ratingsort/2">Our Rating</a></li>
             <li><a href="/locations/categorysort/3">Category</a></li>
+            <li><a href="www.takeourphotograph.com/blog">Back to Blog</a></li>
                      </ul>
 
          <!-- <li><a href="/rails/info">Sitemap</a></li>  -->
