--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -33,7 +33,7 @@
 
      <li class="list-group-item"><strong>Country: </strong><%= location.city_country %></li>
      <li class="list-group-item"><strong>Category: </strong><%= location.category.capitalize %></li>
-     <li class="list-group-item"><strong>Destination Summary: </strong><%= location.destination_summary %></li>
+    <!-- <li class="list-group-item"><strong>Destination Summary: </strong><%= location.destination_summary %></li> -->
      <li class="list-group-item"><strong>Our Rating(1-5): </strong>
 
      <% if location.our_rating == 1 %>
