--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,18 +41,17 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li><a href="/locations">Destinations</a></li>
-          <li><a href="/hiking_trails">Hiking Trails</a></li>
-          <li><a href="/hotels">Hotels</a></li>
+          <li><a href="/locations"><i class="fa fa-map"></i> Destinations</a></li>
+          <li><a href="/hiking_trails"><i class="fa fa-picture-o"></i> Hiking Trails</a></li>
+          <li><a href="/hotels"><i class="fa fa-bed"></i> Hotels</a></li>
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sorted Destinations <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i> Sorted Destinations <span class="caret"></span></a>
             <ul class="dropdown-menu">
-            <li><a href="/locations/pricesort/1">Price</a></li>
-            <li><a href="/locations/ratingsort/2">Our Rating</a></li>
+            <li><a href="/locations/pricesort/1">Price: (<i class="fa fa-usd"></i> <i class="fa fa-minus"></i> <i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i>)</a></li>
+            <li><a href="/locations/ratingsort/2">Our Ratings: (<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-minus"></i> <i class="fa fa-star"></i>)</a></li>
             <li><a href="/locations/categorysort/3">Category</a></li>
-            <li><a href="www.takeourphotograph.com/blog">Back to Blog</a></li>
-                     </ul>
-
+            </ul>
+           <li><a href="http://www.takeourphotograph.com/blog"><i class="fa fa-pencil-square-o"></i> Back to Blog</a></li>
          <!-- <li><a href="/rails/info">Sitemap</a></li>  -->
         </ul>
 
